--- a/push/AndroidManifest.xml
+++ b/push/AndroidManifest.xml
@@ -14,12 +14,18 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.push.MainActivity"
             android:label="@string/app_name" >
+           
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.push.SplashActivity"
+            android:label="@string/title_activity_init" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
     </application>
 
