--- a/push/AndroidManifest.xml
+++ b/push/AndroidManifest.xml
@@ -14,12 +14,30 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.push.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.push.activity.SplashActivity"
+            android:label="@string/title_activity_init"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        </activity>
+        <activity
+            android:name="com.example.push.activity.ProfessorActivity"
+            android:label="@string/title_activity_professor" >
+        </activity>
+        <activity
+            android:name="com.example.push.activity.PreferenceActivity"
+            android:label="@string/title_activity_professor" >
+        </activity>
+        <activity
+            android:name="com.example.push.activity.StudentActivity"
+            android:label="@string/title_activity_student" >
         </activity>
     </application>
 
