--- a/push/.classpath
+++ b/push/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="libs/gcm-server.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gcm.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/json-simple-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gcm-server.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/json_simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
