--- a/push/AndroidManifest.xml
+++ b/push/AndroidManifest.xml
@@ -24,7 +24,14 @@
     <!-- Keeps the processor from sleeping when a message is received. -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    
+    
+    <!--  SMS 을 위한 permission 설정 -->
+    <uses-permission android:name="android.permission.SEND_SMS" />        
+	<uses-permission android:name="android.permission.RECEIVE_SMS" />    
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
