--- a/push/AndroidManifest.xml
+++ b/push/AndroidManifest.xml
@@ -31,30 +31,32 @@
 	<uses-permission android:name="android.permission.RECEIVE_SMS" />    
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	
-	
-    <application
+	<supports-screens android:largeScreens="true" android:anyDensity="true"/>
+  
+	<application
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.push.SplashActivity"
-           
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
+            android:largeHeap="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.example.push.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Light.NoTitleBar">
         </activity>
         <activity
             android:name="com.example.push.ProfessorActivity"
-            android:label="@string/title_activity_professor" >
+            android:label="@string/title_activity_professor"
+            android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
         <activity
             android:name="com.example.push.PreferenceActivity"
@@ -62,10 +64,20 @@
         </activity>
         <activity
             android:name="com.example.push.StudentActivity"
-            android:label="@string/title_activity_student" >
+            android:label="@string/title_activity_student" 
+            android:theme="@android:style/Theme.Light.NoTitleBar">
         </activity>
-
-        <!-- GCM -->
+        
+        <activity
+            android:name="com.example.push.professor.fragment.CancleClassFragment"
+            android:label="@string/title_activity_cancle_class_fragment" >
+        </activity>
+        <activity
+            android:name="com.example.push.adapter.CalendarAdapter"
+            android:label="@string/title_activity_calendar_adapter" >
+        </activity>
+    
+         <!-- GCM -->
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
@@ -79,15 +91,8 @@
 
         <service android:name="com.example.push.GCMIntentService" >
         </service>
-
-        <activity
-            android:name="com.example.push.professor.fragment.CancleClassFragment"
-            android:label="@string/title_activity_cancle_class_fragment" >
-        </activity>
-        <activity
-            android:name="com.example.push.adapter.CalendarAdapter"
-            android:label="@string/title_activity_calendar_adapter" >
-        </activity>
+    
+    
     </application>
 
 </manifest>
