--- a/push/AndroidManifest.xml
+++ b/push/AndroidManifest.xml
@@ -36,6 +36,7 @@
   
 	<application
         android:allowBackup="true"
+        android:largeHeap="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
